# Horti-Fruti

./: AddItemEstoque.cpp  AddLogin.cpp  Admin.cpp  AvisosEstoque.cpp  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeLists.txt  Estoque.cpp  Estoque.csv  Fornecedores.csv  LerEstoque.cpp  LerFornecedores.cpp  LerLogins.cpp  Logins.csv  SubMenuFornecedores.cpp  SubMenuLogin.cpp  TargetDirectories.txt  VerificarLogin.cpp  VerificarMenu.cpp  addfornecedores.cpp  build.ninja  cache-v2-ec3f22cff01480c86f6d.json  clion-Debug-log.txt  cmake-build-debug.ninja_deps  cmake-build-debug.ninja_log  cmakeFiles-v1-f09781135125433c757b.json  cmake_install.cmake  codemodel-v2-48424107416735dcc9de.json  editor.xml  encodings.xml  funcoesgerais.h  index-2024-09-08T06-18-29-0178.json  main.cpp  modules.xml  rules.ninja  target-Hortfruit-Debug-169cae2da3a788db0dfe.json
